# Semestralna_Praca_POS

./: CMakeLists.txt  client.c  client.h  main.c  registracia.c  registracia.h  server.c  server.h  vstup.h
